--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
-[User]
+[General]
 username: jmhobbs
+description-clip: 70
 
 [API]
 interval: 60
@@ -7,7 +8,7 @@ interval: 60
 [GIT]
 interval: 120
 
-[Other]
+[Sync]
 sync: true
 sync-dir: ./sync/
 sync-own: false
