Git syncing is in and works.

--- a/config.ini
+++ b/config.ini
@@ -5,10 +5,8 @@ description-clip: 70
 [API]
 interval: 60
 
-[GIT]
-interval: 120
-
 [Sync]
 sync: true
-sync-dir: ./sync/
+sync-dir: sync/
 sync-own: false
+interval: 240
