--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ interval: 60
 
 [Sync]
 sync: true
-sync-dir: sync/
+# Must end in a / !
+sync-directory: sync/
 sync-own: false
-interval: 240
+sync-interval: 240
