Added documentation, fetch not pull on sync, added identifying colors to repo statuses, some wording changes, new default intervals, CWD correction, about dialog, confirm quit dialog.

--- a/config.ini
+++ b/config.ini
@@ -3,11 +3,11 @@ username: jmhobbs
 description-clip: 70
 
 [API]
-interval: 60
+interval: 120
 
 [Sync]
 sync: true
-# Must end in a / !
+# Must end in a / ! May be a full or relative path.
 sync-directory: sync/
 sync-own: false
-sync-interval: 480
+sync-interval: 600
