Early work on a new version that makes the watcher into a daemon.

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [General]
 username: jmhobbs
-description-clip: 70
+socket: ._gw_SOCKET
 
 [API]
 interval: 120
@@ -11,3 +11,6 @@ sync: true
 sync-directory: sync/
 sync-own: false
 sync-interval: 600
+
+[GUI]
+description-clip: 70
